Reduce body margin on small screenns (Fixes #245)

--- a/adhocracy_client/static/stylesheets/style.css
+++ b/adhocracy_client/static/stylesheets/style.css
@@ -117,8 +117,14 @@ body.logged_in #logo {
 }
 
 body {
-    margin-left: 100px;
-    margin-right: 100px;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+@media only screen and (min-width : 900px) {
+  body {
+      margin-left: 100px;
+      margin-right: 100px;
+  }
 }
 
 header #header {
